# toro_app

./: .env.example  .gitignore  AGENTS.md  README.md  Trucking_Invoice_SaaS_MVP_Plan.md  docker-compose.yml  run.sh  toro-dashboard-charts-spec.md  toro-dashboard-implementation-spec.md  toro-homepage-codex-prompt.md  toro-public-website-spec.md  trucking_saas_codex_instructions.md
apps/backend/: Dockerfile  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/routes/: auth.py  companies.py  dashboard.py  invoices.py
apps/backend/app/core/: config.py  redis.py  security.py
apps/backend/app/db/: session.py
apps/backend/app/db/migrations/: env.py
apps/backend/app/db/migrations/versions/: 0001_create_users.py  0002_add_user_name_fields.py  0003_create_companies_and_memberships.py  0004_add_company_settings_and_invoices.py  0005_add_account_and_company_settings_fields.py
apps/backend/app/models/: __init__.py  company.py  company_membership.py  invoice.py  user.py
apps/backend/app/schemas/: account.py  auth.py  company.py  dashboard.py  invoice.py
apps/backend/app/services/: auth_service.py  company_service.py  invoice_service.py
apps/backend/tests/: test_invoice_service.py
apps/frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/about/: page.tsx
apps/frontend/app/account/: page.tsx
apps/frontend/lib/: api.ts  auth.ts  company.ts  dashboard.ts  invoices.ts  public-site.ts  server-auth.ts
(+67 files in other folders)
