[project]
name = "trucking-saas-backend"
version = "0.1.0"
description = "FastAPI foundation for the trucking SaaS app."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "argon2-cffi>=23.1.0",
  "asyncpg>=0.29.0",
  "email-validator>=2.2.0",
  "fastapi>=0.111.0",
  "httpx2>=0.28.0",
  "pydantic-settings>=2.3.4",
  "python-multipart>=0.0.9",
  "pyjwt>=2.8.0",
  "redis>=5.0.7",
  "reportlab>=4.2.2",
  "sqlalchemy[asyncio]>=2.0.31",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = [
  "black>=24.4.2",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
